fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: theme("fontFamily.inter");
+  overflow-x: hidden;
 }
 
 @media (prefers-color-scheme: dark) {
